syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.logicserver.protobuf";

// Definition

service LogicServer {
    rpc createMember(MemberTO) returns(ResponseMember);
    rpc loginMember(MemberTO) returns(ResponseMember);
}

message MemberTO {
    string username = 1;
    string password = 2;
}

message ResponseMember {
    string username = 2;
}